--- a/model2app/src/main/webapp/WEB-INF/mapppig.properties
+++ b/model2app/src/main/webapp/WEB-INF/mapppig.properties
@@ -5,12 +5,26 @@
 
 
 #view Mapping
+/gallery/result/write=/gallery/list.do
+/notice/result/delete=/notice/list.do
+/notice/result/edit=/notice/content.jsp
+/notice/result/content=/notice/content.jsp
 /notice/result/write=/notice/list.do
 /notice/result/list=/notice/list.jsp
 /movie/result=/movie/result.jsp
 /blood/result=/blood/advice.jsp
 
+
 #about notice
 
 /notice/regist.do=com.academy.model2app.notice.controller.RegistController
 /notice/list.do=com.academy.model2app.notice.controller.ListController
+/notice/content.do=com.academy.model2app.notice.controller.ContentController
+/notice/delete.do=com.academy.model2app.notice.controller.DeleteController
+/notice/edit.do=com.academy.model2app.notice.controller.EditController
+
+
+#about gallery
+
+/gallery/regist.do=com.academy.model2app.gallery.controller.RegistController
+/gallery/list.do=com.academy.model2app.gallery.controller.ListController
